# can-i-afford-it

./: .gitignore  Market_and_PRD.md  PREDICTION_MODEL_DESIGN.md  README.md
prototype/: .env.example  .gitignore  README.md  pyproject.toml
prototype/cashflow/: __init__.py  discretionary.py  income.py  projection.py  recurring.py
prototype/data/: __init__.py  normalize.py  plaid_loader.py
prototype/eval/: __init__.py  backtest.py
prototype/notebooks/: 01_explore_synthetic_data.py  02_recurring_detection.py  03_discretionary_model.py  04_projection.py  05_calibration.py  06_plaid_calibration.py
prototype/synth/: __init__.py  generator.py
