[project]
name = "cashflow-prototype"
version = "0.1.0"
description = "Notebook-provable cash-flow prediction engine for 'Can I Afford It?'"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "matplotlib>=3.9.0",
    "scipy>=1.14.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["synth", "cashflow", "eval", "data"]
